# GroebnerBases

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GroebnerConfig.hpp.in  README.md  main.cpp
src/: CMakeLists.txt  ideal.cpp  ideal.hpp  indets.cpp  indets.hpp  monomial.cpp  monomial.hpp  multinomial.cpp  multinomial.h  multinomial.hpp
test/: multinomial_test.cpp
tst/: CMakeLists.txt  ideal_test.cpp  ideal_test.hpp  indets_test.hpp  monomial_test.hpp  multinomial_test.cpp  multinomial_test.hpp  testmain.cpp
